2012-04-10 John Wu <John dot Wu at ACM dot org>
	* src/uti.cpp:648 cast buf to char* before adding the offset
	* src/table.h: add data type UDT in anticipation of future
	expansions

2012-04-10 John Wu <John dot Wu at ACM dot org>
	* src/util.h, src/util.cpp, src/fileManager.cpp: replace UnixRead
	with ibis::util::read to handle the buffer size limitation in
	POSIX read function (pointed out by Rock Wang)

2012-04-03 John Wu <John dot Wu at ACM dot org>
	* Makefile.am, src/Makefile.am, win/xMinGW.Mak: add missing files
	spotted by Dominique Prunier, details at <http://goo.gl/iQaMK>

2012-04-02 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp:6433 change use of pile.front() to pile[ib], and
	make sure pile[ib] is not nil (to correct match-count case # 166)
	* tests/Makefile.am: move tcapi commands outside of if tests

2012-03-30 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: update util::readString to only designate unquoted
	empty strings as null, quoted empty strings are intentional and
	therefore valid strings
	* tests/Makefile.am: the dollar signs in the input to w7 requires
	escape for the program make
	* src/array_t.h, src/array_t.cpp: add function isSorted to
	consolidate error checking
	* src/iroster.cpp: in ibis::roster::writeSorted use int32_t for
	LONG type

2012-03-29 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: introduce % into the categorical values of w7
	in order to reproduce the test case from Dominique, add test case
	16 and 17 to work with the new data
	* src/dictionary.cpp: on line 428 change to "code < raw_.size()",
	on line 543, return raw_.size() (remove "+1")

2012-03-28 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: extend the data in w7 to include null values
	and empty strings
	* src/part.cpp: take into account of null mask when working with
	strings
	* src/index.h, src/index.cpp: move sumBins to be public, add a new
	version to work with a list of bin numbers, allow addBits to