@@ -709,13 +709,13 @@ else
 AC_MSG_RESULT([no])
 fi
 
-dnl AC_MSG_CHECKING(whether to configure Makefiles in contrib)
-dnl AC_ARG_ENABLE(contrib,
-dnl               [AS_HELP_STRING([--enable-contrib],[build contributed code in contrib directory (default: no)])],
-dnl 	      [if test "$enableval" = "yes" ; then contrib = "yes" ; else contrib = "no" ; fi],[contrib = "no"])
-dnl AC_MSG_RESULT(${contrib})
-dnl AM_CONDITIONAL(CONFIG_CONTRIB, test "$contrib" = "yes")
-dnl AC_SUBST(CONFIG_CONTRIB)
+AC_MSG_CHECKING(whether to configure Makefiles in contrib)
+AC_ARG_ENABLE(contrib,
+              [AS_HELP_STRING([--enable-contrib],[build contributed code in contrib directory (default: no)])],
+	      [if test "$enableval" = "yes" ; then contrib = "yes" ; else contrib = "no" ; fi],[contrib = "no"])
+AC_MSG_RESULT(${contrib})
+AM_CONDITIONAL(BUILD_CONTRIB, test "$contrib" = "yes")
+AC_SUBST(BUILD_CONTRIB)
 
 AC_DEFINE_UNQUOTED(FASTBIT_IBIS_INT_VERSION,
  `echo $PACKAGE_VERSION | awk 'BEGIN { FS="." } { printf("%d%.2d%.2d%.2d\n", substr($1, 5), $2, $3, $4); }'`,
@@ -730,7 +730,7 @@ AC_SUBST(OBJDIR)
 #end stuff not generated by autoscan
 
 AC_CONFIG_FILES([Makefile src/Makefile examples/Makefile tests/Makefile
-	         java/Makefile contrib/fbmerge/Makefile])
+	         java/Makefile contrib/Makefile contrib/fbmerge/Makefile])
 AC_CONFIG_FILES([tests/scripts/fastbit-config],
 		[chmod a+x tests/scripts/fastbit-config])
 AC_CONFIG_COMMANDS([FastBit-prefix],
